# rust-pytorch-gpu-template

./: Makefile  cuda-12.5-2204.sh  cuda-12.5-2404.sh  env.sh  install-libtorch.sh
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: rust.yml
hello-pytorch/: Cargo.toml
mnist-cli-gpu/: Cargo.toml
portable-pytorch/: Cargo.toml
portable-pytorch/src/: lib.rs
pytorch-gpu-util/: Cargo.toml
pytorch-mnist/: Cargo.toml
stress/: Cargo.toml  README.md
stress/src/: main.rs
translate/: Cargo.toml
